--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,8 +56,6 @@ h1 {
 }
 
 
-
-
 #main > div {
 	border-radius: 2px;
 	border: 5px solid red;
@@ -66,6 +64,15 @@ h1 {
 	grid-template-columns:1fr 1fr;
 }
 
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
 
 #main > div > div {
 	border-radius: 2px;
