--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,23 +6,31 @@ body {
 .wrapper {
 	background-color:#CFB53B;
 	display:grid;
-	grid-template-columns:repeat(auto-fit, minmax(4rem,1fr));;
-	grid-template-rows: 2fr 3fr 3fr 1fr;
+	grid-template-columns:repeat(auto-fit, minmax(6em,1fr));
+	grid-column-gap: 24px;
+	grid-template-rows: 1fr 4fr auto;
 	width:82%;
 	margin-left: auto;	
 	margin-right: auto;
 	border-radius: 25px;
-	border: 14px solid white;
-	
+	border: 14px solid #fff;
+	align-items: flex-start;
 }
 
 .wrapper > div{
-	border-radius: 2px;
-	border: 2px solid black;
+    padding:0;
 }
 	
 .scrollM{
-	grid-column:1/3;
+     text-align:auto;
+     margin-left:auto;
+     margin-right:auto;
+}
+
+.scollC{
+     text-align:auto;
+     margin-left:auto;
+     margin-right:auto;
 }
 
 #header{
@@ -37,59 +45,66 @@ body {
 h1 {
 	margin: 0;
 }
+
 #main{
 	display:grid;
 	grid-template-columns:1fr 1fr;
 	grid-template-row:1fr;
 	grid-column:1/3;
+    min-height: 0;
+    min-width: 0;
 }
 
  
 #selM {
 	grid-row:1;
 	grid-column:1/2;
+    min-width: 200px;
+	
 } 
+
+
+h3 {
+    text-align:center;
+}
+
 
 #selC {
 	grid-row:1;
 	grid-column:2/3;
+    min-width: 200px;
 }
 
 
 #main > div {
-	border-radius: 2px;
-	border: 5px solid red;
 	display:grid;
 	grid-template-row:1fr;
-	grid-template-columns:1fr 1fr;
 }
 
 td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
+  border: 2px solid #fff;
+  text-align: center;
   padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #fbeee8;
 }
 
-#main > div > div {
-	border-radius: 2px;
-	border: 2px solid blue;
-	
-}
- 
 #textMajor{
-	text-align:left;
-	padding-left:10%;
-	justify-self:start;
+	text-align:top;
+	margin-left:auto;
+	margin-right:auto;
+	margin-bottom:0;
 
 }
 
 #textClass{
 	justify-self:start;
-	text-align:left;
+	text-align:top;
+	margin-left:auto;
+	margin-right:auto;
+	margin-bottom:0;
 }
  
 #Majors{
@@ -98,20 +113,36 @@ tr:nth-child(even) {
 	align-self:center;
 } 
  
+#classChart {
+   margin-left:auto; 
+   margin-right:auto; 
+   min-height: 0;
+   min-width: 0;
+}
+
+#majorChart {
+    margin-left:auto; 
+    margin-right:auto;
+    min-height: 0;
+    min-width: 0;
+}
+ 
 #Classes{
-	ttext-align:center;
+	text-align:center;
 	justify-self:center;
 	align-self:center;
 } 
 
-
-
 #mChart {
-	grid-column:1/3;
+	grid-column:1/2;
+    min-height: 0;
+    min-width: 0;
 }
 
 #cChart {
-	grid-column:1/3;
+	grid-column:2/3;
+    min-height: 0;
+    min-width: 0;
 }
 
 h6 {
@@ -119,7 +150,7 @@ h6 {
 }
 
 #footer {
-	padding:0em;
+	padding:18px 5px 5px 5px;
 	align-self: end;
 	justify-self: end;
 	grid-column:2;
